python-reahl (4.1.0) unstable; urgency=low

 * Added Field.with_label #185.
 * Renamed Rename and expose in_production kwarg to strict_checking and expose it #174.
 * Added reahl exportstatic #175.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 31 Jul 2018 15:15:00 +0200


python-reahl (4.0.2) unstable; urgency=low

 * Fixed Vagrantfile to wait for apt when starting up #123.
 * Fixed reahl script to use correct sys.argv[0] #124.
 * Relaxed dependency upper version limits on pip, setuptools, pytest #125.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 31 Jul 2018 15:15:00 +0200


python-reahl (4.0.1) unstable; urgency=low

 * Fixed breakage when running reahl help-commands #117.
 * Updated PYPI project doc links #116.
 * Implemented SQLAlchemy pessimistic disconnect handling #118.
 * Fixed sorting of DataTable which broke on internationalised Views #121.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 31 May 2018 16:05:00 +0200


python-reahl (4.0.0) unstable; urgency=low

 * Removed all previously deprecated functionality.
 * Removed css_id kwarg to Nav, Menu.
 * Removed a_list argument to Menu constructor.
 * Removed Menu.add_submenu.
 * Removed Menu.add_item, made MenuItem class hierachy private.
 * Upgraded Bootstrap to 4.1.1.
 * Upgraded JQuery to 3.3.1 with JQuery-migrate 3.0.1.
 * Upgraded JQueryUI to 1.12.1, but trimmed it down to only the widget factory.
 * Upgraded jQuery Validation Plugin 1.17.0 (patched).
 * Upgraded JQuery BBQ to 1.3pre (patched).
 * Upgraded JQuery-form to 4.2.2.
 * Upgraded HTML5shiv to 3.7.3.
 * Added Popper 1.12.9.
 * Removed dependency on jquery-metadata plugin, and removed the plugin.
 * Removed the file_finder for bzr, roll your own instead: http://code.activestate.com/recipes/577910-bazaar-as-a-setuptools-file-finder/.
 * Removed devpitest and devpipush commands.
 * Changed DatabaseControl descendents and related commands to allow explicitly specifying the superuser to log in as when performing privileged actions.
 * Upgraded dependency on wheel.